--- a/html/src/localization/strings/zh_CN.json
+++ b/html/src/localization/strings/zh_CN.json
@@ -243,7 +243,7 @@
                         "sort_by_status": "依状态排序",
                         "sort_gps_to_top": "将 GPS 排序到顶部",
                         "sort_gps_to_top_notice": "（仅限上线玩家）",
-                        "sort_favorite_by": "收藏玩家 排序依据",
+                        "sort_favorite_by": "星标玩家 排序依据",
                         "sort_favorite_by_alphabet": "字母顺序",
                         "sort_favorite_by_online_time": "上线时长",
                         "sort_online_by": "网页玩家 排序依据",
@@ -311,14 +311,14 @@
                     "header": "SteamVR 手腕叠加层",
                     "description": "* 当 VRChat 开启时它会自动开启",
                     "grip": "握持：Vive 或其它控制器的握持键、Oculus X/A 按键",
-                    "menu": "选单：Vive 选单键、Index B、Oculus Y/B 按键",
+                    "menu": "菜单：Vive 菜单键、Index B、Oculus Y/B 按键",
                     "steamvr_overlay": "SteamVR 叠加层",
                     "wrist_feed_overlay": "手腕动态叠加层",
                     "hide_private_worlds": "隐藏私人世界",
                     "start_overlay_with": "启动时一并启动",
                     "overlay_button": "叠加层按键",
                     "overlay_button_grip": "握持",
-                    "overlay_button_menu": "选单",
+                    "overlay_button_menu": "菜单",
                     "display_overlay_on": "叠加层显示位置",
                     "display_overlay_on_left": "左手",
                     "display_overlay_on_right": "右手",
@@ -391,7 +391,7 @@
                     },
                     "cache_debug": {
                         "header": "VRCX 世界缓存/调试",
-                        "disable_gamelog": "关闭游戏记录",
+                        "disable_gamelog": "关闭游戏日志",
                         "disable_gamelog_notice": "（可能会弄坏很多东西！）",
                         "user_cache": "玩家缓存：",
                         "world_cache": "世界缓存：",
@@ -426,7 +426,7 @@
                         "enable": "启用",
                         "enable_tooltip": "需要启用 SteamVR 叠加层选项",
                         "filter": "筛选器",
-                        "filter_favorites": "收藏",
+                        "filter_favorites": "星标好友",
                         "filter_friends": "好友",
                         "filter_everyone": "所有人",
                         "message_timeout": "消息显示时长"
@@ -436,7 +436,7 @@
                         "enable": "启用",
                         "enable_tooltip": "需要启用 SteamVR 叠加层选项",
                         "filter": "筛选器",
-                        "filter_favorites": "收藏",
+                        "filter_favorites": "星标好友",
                         "filter_friends": "好友",
                         "filter_everyone": "所有人",
                         "timeout_threshold": "超时阈值"
@@ -450,7 +450,7 @@
         "search_result_active": "活跃",
         "search_result_offline": "离线",
         "search_result_more": "搜索更多：",
-        "direct_access_tooltip": "直接存取解贴簿的 ID / 链接",
+        "direct_access_tooltip": "直接存取剪贴板的 ID / 链接",
         "refresh_tooltip": "刷新好友",
         "friends": "好友",
         "me": "我",
@@ -879,7 +879,7 @@
             "wrist": "手腕动态筛选器",
             "on": "开启",
             "off": "关闭",
-            "favorite": "收藏",
+            "favorite": "星标好友",
             "friends": "好友",
             "everyone": "所有人",
             "cancel": "取消",
