--- a/html/src/localization/strings/zh_TW.json
+++ b/html/src/localization/strings/zh_TW.json
@@ -1,6 +1,6 @@
 {
     "language": "繁體中文 (zh_TW)",
-    "translator": "Kamiya",
+    "translator": "Kamiya,XoF_eLtTiL",
     "nav_tooltip": {
         "feed": "動態",
         "game_log": "遊戲紀錄",
@@ -24,7 +24,7 @@
                 "username": "玩家名稱或電子信箱",
                 "password": "密碼",
                 "saveCredentials": "儲存登入資料",
-                "devEndpoint": "開發接口",
+                "devEndpoint": "開發介面",
                 "endpoint": "Endpoint",
                 "websocket": "WebSocket"
             }
@@ -115,8 +115,8 @@
         },
         "friend_list": {
             "header": "好友列表",
-            "bulk_unfriend": "批量解除好友",
-            "bulk_unfriend_selection": "批量解除已選擇的好友",
+            "bulk_unfriend": "批次解除好友",
+            "bulk_unfriend_selection": "批次解除已選擇的好友",
             "load": "讀取缺失的項目",
             "load_notice": "這會向 API 傳送大量請求，所以請謹慎使用",
             "load_tooltip": "讀取",
@@ -163,7 +163,7 @@
             "past_display_names": "過去顯示名稱",
             "config_json": "JSON 資料",
             "current_user_json": "目前玩家的 JSON 資料",
-            "feedback": "反饋",
+            "feedback": "回饋",
             "refresh_tooltip": "重新整理",
             "clear_results_tooltip": "清除結果"
         },
@@ -382,12 +382,12 @@
                         "dance_world_only": "僅限跳舞世界"
                     },
                     "screenshot_helper": {
-                        "header": "屏幕截图助手",
-                        "description": "将在你在游戏中拍摄的任何照片的文件元数据中存储世界ID和世界名称。",
-                        "description_tooltip": "不幸的是，windows不支持本机查看PNG文本块（很多东西都不支持），但你可以使用exiftool等命令行工具、png块检查器或十六进制编辑器来查看。",
+                        "header": "螢幕截圖助手",
+                        "description": "將在你在遊戲中拍攝的任何照片的文件元數據中儲存世界ID和世界名稱。",
+                        "description_tooltip": "不幸的是，windows不支持本機查看PNG文本塊（很多東西都不支持），但你可以使用exiftool等命令行工具、png塊檢查器或十六進位制編輯器來查看。",
                         "enable": "啟用",
-                        "modify_filename": "修改文件名",
-                        "modify_filename_tooltip": "除了文件元数据外，将把世界ID添加到截图文件名中。"
+                        "modify_filename": "修改檔案名",
+                        "modify_filename_tooltip": "除了文件元數據外，將把世界ID添加到截圖檔案名中。"
                     },
                     "cache_debug": {
                         "header": "VRCX 世界快取/除錯",
@@ -801,7 +801,7 @@
             "description": "這些選項僅適用於高級玩家。",
             "example": "變更 FPS 限制：--fps=<N> 例：",
             "path_override": "VRChat 位置覆蓋",
-            "vrchat_docs": "VRChat 文檔",
+            "vrchat_docs": "VRChat 文件",
             "unity_manual": "Unity 手冊",
             "save": "儲存"
         },
@@ -822,7 +822,7 @@
             "camera_resolution": "相機解析度",
             "screenshot_resolution": "螢幕截圖解析度",
             "disable_discord_presence": "停用 Discord 遊戲狀態",
-            "vrchat_docs": "VRChat 文檔",
+            "vrchat_docs": "VRChat 文件",
             "cancel": "取消",
             "save": "儲存"
         },
@@ -963,7 +963,7 @@
             "header": "備註匯出",
             "description1": "這個過程將匯出你所有的 VRCX 備忘錄並將它們匯入到 VRChat 備註中。",
             "description2": "請注意以下限制：",
-            "description3": "- API 接口有速率限制，每個請求之間會有很大的延遲。",
+            "description3": "- API 介面有速率限制，每個請求之間會有很大的延遲。",
             "description4": "- 每個備註的字數限制為 256 個字元。",
             "description5": "- 髒話過濾器（沒有樂趣）。",
             "description6": "- 不能換行（將會被替換成空格）。",
@@ -1218,13 +1218,13 @@
         },
         "change_table_size": {
             "header": "最大表格大小",
-            "description": "限制從資料庫讀取紀錄到介面的數量，較大的資料表大小可能會影響內存用量和效能 （預設：1000）",
+            "description": "限制從資料庫讀取紀錄到介面的數量，較大的資料表大小可能會影響記憶體用量和效能 （預設：1000）",
             "cancel": "取消",
             "save": "儲存",
             "input_error": "請輸入有效的行數"
         },
         "photon_lobby_timeout": {
-            "header": "玩家愈時閥值",
+            "header": "玩家愈時閾值",
             "description": "輸入秒數（預設：3）",
             "cancel": "取消",
             "ok": "OK",
@@ -1232,7 +1232,7 @@
         },
         "auto_clear_cache": {
             "header": "VRCX 快取清除間隔",
-            "description": "輸入小時數，較大的數值可能會影響內存用量和性能 （預設：24，關閉：0）",
+            "description": "輸入小時數，較大的數值可能會影響記憶體用量和性能 （預設：24，關閉：0）",
             "cancel": "取消",
             "ok": "OK",
             "input_error": "請輸入有效的小時數"
